; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_imagelist.c_create_bitmap.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_imagelist.c_create_bitmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i32, i32, i32, i8*, i8* }
%struct.TYPE_9__ = type { i8*, i8*, i32, i32 }

@BI_RGB = common dso_local global i32 0, align 4
@DIB_RGB_COLORS = common dso_local global i32 0, align 4
@DT_CENTER = common dso_local global i32 0, align 4
@DT_VCENTER = common dso_local global i32 0, align 4
@DT_SINGLELINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i8*)* @create_bitmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_bitmap(i8* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_10__, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_9__, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  store i8* null, i8** %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 1
  store i8* null, i8** %16, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 2
  %18 = load i8*, i8** %5, align 8
  %19 = ptrtoint i8* %18 to i32
  store i32 %19, i32* %17, align 8
  %20 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 3
  %21 = load i8*, i8** %6, align 8
  %22 = ptrtoint i8* %21 to i32
  store i32 %22, i32* %20, align 4
  %23 = call i32 @CreateCompatibleDC(i32 0)
  store i32 %23, i32* %9, align 4
  %24 = call i32 @memset(%struct.TYPE_10__* %10, i32 0, i32 32)
  %25 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  store i32 32, i32* %26, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 5
  store i8* %27, i8** %29, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 4
  store i8* %30, i8** %32, align 8
  %33 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %33, i32 0, i32 1
  store i32 24, i32* %34, align 4
  %35 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 2
  store i32 1, i32* %36, align 8
  %37 = load i32, i32* @BI_RGB, align 4
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 3
  store i32 %37, i32* %39, align 4
  %40 = load i32, i32* %9, align 4
  %41 = load i32, i32* @DIB_RGB_COLORS, align 4
  %42 = call i32 @CreateDIBSection(i32 %40, %struct.TYPE_10__* %10, i32 %41, i32* null, i32* null, i32 0)
  store i32 %42, i32* %11, align 4
  %43 = load i32, i32* %9, align 4
  %44 = load i32, i32* %11, align 4
  %45 = call i32 @SelectObject(i32 %43, i32 %44)
  store i32 %45, i32* %12, align 4
  %46 = load i32, i32* %7, align 4
  %47 = call i32 @CreateSolidBrush(i32 %46)
  store i32 %47, i32* %13, align 4
  %48 = load i32, i32* %9, align 4
  %49 = load i32, i32* %13, align 4
  %50 = call i32 @FillRect(i32 %48, %struct.TYPE_9__* %14, i32 %49)
  %51 = load i32, i32* %13, align 4
  %52 = call i32 @DeleteObject(i32 %51)
  %53 = load i32, i32* %9, align 4
  %54 = load i8*, i8** %8, align 8
  %55 = load i32, i32* @DT_CENTER, align 4
  %56 = load i32, i32* @DT_VCENTER, align 4
  %57 = or i32 %55, %56
  %58 = load i32, i32* @DT_SINGLELINE, align 4
  %59 = or i32 %57, %58
  %60 = call i32 @DrawTextA(i32 %53, i8* %54, i32 -1, %struct.TYPE_9__* %14, i32 %59)
  %61 = load i32, i32* %9, align 4
  %62 = load i32, i32* %12, align 4
  %63 = call i32 @SelectObject(i32 %61, i32 %62)
  %64 = load i32, i32* %9, align 4
  %65 = call i32 @DeleteDC(i32 %64)
  %66 = load i32, i32* %11, align 4
  ret i32 %66
}

declare dso_local i32 @CreateCompatibleDC(i32) #1

declare dso_local i32 @memset(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @CreateDIBSection(i32, %struct.TYPE_10__*, i32, i32*, i32*, i32) #1

declare dso_local i32 @SelectObject(i32, i32) #1

declare dso_local i32 @CreateSolidBrush(i32) #1

declare dso_local i32 @FillRect(i32, %struct.TYPE_9__*, i32) #1

declare dso_local i32 @DeleteObject(i32) #1

declare dso_local i32 @DrawTextA(i32, i8*, i32, %struct.TYPE_9__*, i32) #1

declare dso_local i32 @DeleteDC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
